# gencxx

./: CMakeLists.txt  package.xml  setup.py
cmake/: gencxx-extras.cmake.em
scripts/: CMakeLists.txt  gen_cxx.py  msg.h.template  msg.hxx.template  srv.h.template  srv.hxx.template
src/gencxx/: __init__.py
